[package]
name = "raft-zero"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = { version = "0.2.1" }
serde = { version = "1.0.114", features = ["derive", "rc"] }
tokio = { version = "0.2.22", features = ["time", "rt-core", "io-util"] }
futures = "0.3.5"
rand = "0.7.3"
chrono = "0.4.15"
log = "0.4.11"
